<resources>
    <string name="app_name">MyChat</string>
    <string name="create_new_account">Create new account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="email_invalid">Email invalid</string>
    <string name="password_invalid">Password invalid</string>
    <string name="notify_login_sccess">Login successful!</string>
</resources>
