<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.mychat.screen.ui.fragment.register.RegisterViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_toolbar"
            bind:haveBackButton="@{true}"
            bind:title="@{@string/register}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/create_new_account"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="0dp"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_10"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_username"
                android:text="@={viewModel.userName}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/input_layout_username"
            app:layout_constraintStart_toStartOf="@id/input_layout_username"
            app:layout_constraintTop_toBottomOf="@id/input_layout_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:text="@={viewModel.email}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@id/input_layout_email"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="@id/input_layout_email"
            app:layout_constraintTop_toBottomOf="@id/input_layout_email" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/input_layout_password"
            app:layout_constraintStart_toStartOf="@id/input_layout_password"
            app:layout_constraintTop_toBottomOf="@id/input_layout_password" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
