<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_toolbar"
            bind:haveBackButton="@{true}"
            bind:title="@{@string/login}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_140"
            android:layout_marginEnd="@dimen/dp_10"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@id/input_layout_password"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/sp_20"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>